--- a/Resource/template/admin/edit.twig
+++ b/Resource/template/admin/edit.twig
@@ -36,7 +36,7 @@
                                     <div class="d-inline-block" data-toggle="tooltip" data-placement="top"
                                          title="Tooltip">
                                     <span class="card-title">
-                                        {{ 'product_review.admin.product_review_edit.review_dettail'|trans }}
+                                        {{ 'product_review.admin.product_review_edit.review_detail'|trans() }}
                                     </span>
                                     </div>
                                 </div>
