--- a/Resource/template/default/complete.twig
+++ b/Resource/template/default/complete.twig
@@ -1,70 +1,34 @@
 {#
-/*
- * This file is part of the ProductReview plugin
- *
- * Copyright (C) 2016 LOCKON CO.,LTD. All Rights Reserved.
- *
- * For the full copyright and license information, please view the LICENSE
- * file that was distributed with this source code.
- */
+This file is part of EC-CUBE
+
+Copyright(c) LOCKON CO.,LTD. All Rights Reserved.
+
+http://www.lockon.co.jp/
+
+For the full copyright and license information, please view the LICENSE
+file that was distributed with this source code.
 #}
 {% extends 'default_frame.twig' %}
 
-{% set body_class = 'product_review_page' %}
-
-{% block stylesheet %}
-<style>
-    .product_review_page p{
-        display: block;
-        -webkit-margin-before: 1em;
-        -webkit-margin-after: 1em;
-        -webkit-margin-start: 0px;
-        -webkit-margin-end: 0px;
-    }
-    @media only screen and (min-width: 768px){
-        .complete_message {
-            text-align: center;
-        }
-        .complete_message .heading01 {
-            font-size: 3.2rem;
-        }
-    }
-    .product_review_page a.btn-info {
-        color: #fff;
-        background-color: #525263;
-        border-color: #525263;
-        padding: 10px 16px;
-        font-weight: bold;
-        height: 44px;
-        border-radius: 0;
-    }
-</style>
-{% endblock stylesheet %}
+{% set body_class = 'product_review_complete' %}
 
 {% block main %}
-<h1 class="page-heading">{{ 'plugin.product_review.front.review'|trans }}</h1>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <div class="container-fluid">
-                <div id="deliveradd_input" class="row">
-                    <div class="col-sm-10 col-sm-offset-1">
-                        <div class="complete_message">
-                            <h2 class="heading01">{{ 'plugin.product_review.front.complete.thank.you'|trans }}</h2>
-                            <p>{{ 'plugin.product_review.front.complete.message'|trans|raw }}</p>
-                        </div>
-                        <div class="row no-padding">
-                            <div class="btn_group col-sm-offset-4 col-sm-4">
-                                <p>
-                                    <a href="{{ url('product_detail', {'id': id}) }}" class="btn btn-info btn-block">{{ 'plugin.product_review.front.complete.btn.return'|trans }}</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div><!-- /.col -->
-                </div><!-- /.row -->
+    <div class="ec-role">
+        <div class="ec-pageHeader">
+            <h1>{{ 'product_review.front.review.title'|trans}}</h1>
+        </div>
+    </div>
+    <div class="ec-registerCompleteRole">
+        <div class="ec-off3Grid ec-text-ac">
+            <div class="ec-off3Grid__cell">
+                <div class="ec-reportHeading">
+                    <h2>{{ 'product_review.front.review.complete.thanks'|trans}}</h2>
+                </div>
+                <p class="ec-reportDescription">{{ 'product_review.front.review.complete.thanks_detail'|trans|nl2br }}</p>
+                <div class="ec-off4Grid">
+                    <div class="ec-off4Grid__cell"><a class="ec-blockBtn--cancel" href="{{ url('product_detail', { id: id }) }}">{{ 'product_review.front.review.complete.back'|trans }}</a></div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
