--- a/Resource/template/default/index.twig
+++ b/Resource/template/default/index.twig
@@ -14,6 +14,16 @@ file that was distributed with this source code.
 
 {% form_theme form 'Form/form_div_layout.twig' %}
 
+{% block stylesheet %}
+    <style>
+        #product_review_recommend_level > label {
+            display: block;
+            line-height: 0px;
+            margin: 0px;
+        }
+    </style>
+{% endblock %}
+
 {% block main %}
     <div class="ec-registerRole">
         <div class="ec-pageHeader">
